<resources>
    <string name="app_name">Skin Cancer</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis: </string>
    <string name="imgPreview">Preview</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="waktu_analisis">Waktu Analisis: </string>
    <string name="waktu_analisis_ms">%d ms</string>
    <string name="history_label_score">%1$s %2$s</string>
    <string name="capture">Capture</string>
    <string name="switch_cam">Switch Cam</string>
    <string name="result_image">Result Image</string>
    <string name="result_label">Result Label</string>
    <string name="history">History</string>
    <string name="close">Close</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="news">News</string>
    <string name="desc">Description</string>
    <string name="content">Content</string>
    <string name="latest_news">Latest News</string>
    <string name="see_history">See History</string>
    <string name="Scan">Start Scanning</string>
    <string name="More">See More</string>
</resources>
